--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
 <body>
     <h1>Esto es un titulo</h1>
     <h2>Probando Sass!!!!</h2>
-    <p>Esto es una prueba</p>
+    <p>Esto es una prueba con sass</p>
 </body>
 </html>
