--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>IsaacTunes</title>
-    <link rel="stylesheet" href="css/style.css">
+    @import "head.html"
 </head>
 <body>
-    <h1>Esto es un titulo</h1>
-    <h2>Probando Sass!!!!</h2>
-    <p>Esto es una prueba con sass</p>
+         
+     @import "header.html"
+     @import "songs-list.html"
 </body>
 </html>
