dejamos listo los mapas de archivos css y js

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
 <body>
          
      @import "header.html"
-     @import "songs-list.html"
+     <div class="container">
+        @import "songs-list.html"
+     </div>
+<script src="main.js"></script>
 </body>
 </html>
