--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     @import "head.html"
 </head>
 <body>
-         
+    <h1>prueba</h1>  
      @import "header.html"
      <div class="container">
         @import "songs-list.html"
